--- a/src/School/ConfigBundle/Resources/views/Droit/new.html.twig
+++ b/src/School/ConfigBundle/Resources/views/Droit/new.html.twig
@@ -1,15 +1,43 @@
-{% extends '::base.html.twig' %}
+{% extends 'SchoolGestionBundle:Default:index.html.twig' %}
 
-{% block body -%}
-    <h1>Droit creation</h1>
+{% block content -%}
+    <h2>Creation d'un droit</h2>
 
-    {{ form(form) }}
+    {#{{ form(form) }}#}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('proviseur_droit') }}">
-            Back to the list
-        </a>
-    </li>
-</ul>
+    {{ form_start(form)}}
+    <div class="form-group">
+        <div class="row">
+            <div class="col-sm-6">
+                <label>Nom du droit</label>
+                {{ form_widget(form.nom, {'attr': {'class': 'form-control'}})  }}
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="row">
+            <div class="col-sm-6">
+                <label>Membres du Droit</label>
+                {{ form_widget(form.membreDuDroit, {'attr': {'class': 'form-control'}})  }}
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="row">
+            <div class="col-sm-6">
+                <label>Description</label>
+                {{ form_widget(form.description, {'attr': {'class': 'form-control'}})  }}
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="row">
+            <div class="col-sm-6">
+                <label>Token</label>
+                {{ form_widget(form.rightToken, {'attr': {'class': 'form-control'}})  }}
+            </div>
+        </div>
+    </div>
+
+    {{ form_end(form)}}
 {% endblock %}
