--- a/src/School/StudentBundle/Resources/views/Absence/absenceClasse.html.twig
+++ b/src/School/StudentBundle/Resources/views/Absence/absenceClasse.html.twig
@@ -50,7 +50,7 @@
                         <button type="submit" class="btn btn-green">Enregistrer</button>
                     </td>
                     <td>
-                        <button type="reset" class="btn btn-blue">Annuler</button>
+                        <button type="reset" class="btn btn-blue">Effacer</button>
                     </td>
                 </tr>
             </tbody>
