--- a/src/School/StudentBundle/Resources/views/Student/addStudent.html.twig
+++ b/src/School/StudentBundle/Resources/views/Student/addStudent.html.twig
@@ -105,6 +105,6 @@
 	</div>
 	{{ form_end(form)}}
 
-     <a href="{{ path('school_gestion_homepage') }}" class="btn btn-info">Annuler</a>
+     <a href="{{ path('school_student_list') }}" class="btn btn-info">Annuler</a>
 
 {% endblock %}
