--- a/src/School/ConfigBundle/Resources/views/Droit/show.html.twig
+++ b/src/School/ConfigBundle/Resources/views/Droit/show.html.twig
@@ -1,6 +1,6 @@
-{% extends '::base.html.twig' %}
+{% extends 'SchoolGestionBundle:Default:index.html.twig' %}
 
-{% block body -%}
+{% block content -%}
     <h1>Droit</h1>
 
     <table class="record_properties">
