--- a/src/School/MatiereBundle/Resources/views/Categorie/index.html.twig
+++ b/src/School/MatiereBundle/Resources/views/Categorie/index.html.twig
@@ -21,8 +21,8 @@
                     <td><a href="{{ path('categorie_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                     <td>{{ entity.nom }}</td>
                     <td>
-                        <a class="btn btn-info" href="{{ path('categorie_show', { 'id': entity.id }) }}"><i class="glyphicon glyphicon-eye-open"></i> Détails</a>
-                        <a class="btn btn-success" href="{{ path('categorie_edit', { 'id': entity.id }) }}"><i class="glyphicon glyphicon-trash"></i> Modifier</a>
+                        <a class="btn btn-info" href="{{ path('categorie_show', { 'id': entity.id }) }}"><i class="glyphicon glyphicon-eye-open"></i></a>
+                        <a class="btn btn-success" href="{{ path('categorie_edit', { 'id': entity.id }) }}"><i class="glyphicon glyphicon-edit"></i></a>
                     </td>
                 </tr>
             {% endfor %}
