--- a/src/School/MatiereBundle/Resources/views/EstDispense/edit.html.twig
+++ b/src/School/MatiereBundle/Resources/views/EstDispense/edit.html.twig
@@ -1,16 +1,70 @@
 {% extends 'SchoolGestionBundle:Default:index.html.twig' %}
 
 {% block content -%}
-    <h1 class="text-center">Modification d'un enseignement</h1>
+{{ form_start(edit_form)}}
+<div class="row">
+    <div class="col-md-12">
+        <h1 class="text-center">Modification d'un enseignement</h1>
+        <div>
+            <div class="col-sm-6">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label>Nom de la mati&egrave;re</label>
+                        {{ form_widget(edit_form.matiere, {'attr': {'class': 'form-control'}})  }}
+                    </div>
+                    <div class="form-group">
+                        <label>Enseignant</label>
+                        {{ form_widget(edit_form.enseignant, {'attr': {'class': 'form-control'}})  }}
+                    </div>
+                    <div class="form-group">
+                        <label>Coefficient</label>
+                        {{ form_widget(edit_form.coefficient, {'attr': {'class': 'form-control'}})  }}
+                    </div>
+                    <div class="form-group">
+                        <label>Ann&eacute; Acad&eacute;mique</label>
+                        {{ form_widget(edit_form.annee, {'attr': {'class': 'form-control'}})  }}
+                    </div>
+                </div>
+            </div>
+            <div class=" col-md-6">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label>Nombre Heures Annuel</label>
+                        {{ form_widget(edit_form.nombreHeuresAnnuel, {'attr': {'class': 'form-control'}})  }}
+                    </div>
+                    <div class="form-group">
+                        <label>Nombre Le&ccedil;ons Annuel</label>
+                        {{ form_widget(edit_form.nombreLeconsAnnuel, {'attr': {'class': 'form-control'}})  }}
+                    </div>
+                    <div class="form-group">
+                        <label>Classe</label>
+                        {{ form_widget(edit_form.classe, {'attr': {'class': 'form-control'}})  }}
+                    </div>
+                    <div class="form-group">
+                        <label>Titulaire</label>
+                        {{ form_widget(edit_form.titulaire, {'attr': {'class': 'form-control'}})  }}
+                    </div>
 
-    {{ form(edit_form) }}
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    {{ form_end(edit_form)}}
 
-        <ul class="record_actions">
+{#        <ul class="record_actions">
     <li>
         <a href="{{ path('estdispense') }}">
             Back to the list
         </a>
     </li>
     <li>{{ form(delete_form) }}</li>
-</ul>
+</ul>#}
+    <p>&nbsp;&nbsp;&nbsp;
+        <a href="{{ path('estdispense')}}" class="btn btn-primary">
+            <i class="glyphicon glyphicon-chevron-left"></i>
+            Retour &agrave; la liste
+        </a>
+        {{ form(delete_form) }}
+    </p>
 {% endblock %}
