--- a/src/School/MatiereBundle/Resources/views/EstDispense/new.html.twig
+++ b/src/School/MatiereBundle/Resources/views/EstDispense/new.html.twig
@@ -34,6 +34,10 @@
                         {{ form_widget(form.nombreHeuresAnnuel, {'attr': {'class': 'form-control'}})  }}
                     </div>
                     <div class="form-group">
+                        <label>Nombre Le&ccedil;ons Annuel</label>
+                        {{ form_widget(form.nombreLeconsAnnuel, {'attr': {'class': 'form-control'}})  }}
+                    </div>
+                    <div class="form-group">
                         <label>Classe</label>
                         {{ form_widget(form.classe, {'attr': {'class': 'form-control'}})  }}
                     </div>
@@ -41,9 +45,11 @@
                         <label>Titulaire</label>
                         {{ form_widget(form.titulaire, {'attr': {'class': 'form-control'}})  }}
                     </div>
+
                 </div>
             </div>
         </div>
+    </div>
     </div>
     {{ form_end(form)}}
     <ul class="record_actions">
