--- a/src/School/MatiereBundle/Resources/views/Matiere/edit.html.twig
+++ b/src/School/MatiereBundle/Resources/views/Matiere/edit.html.twig
@@ -1,16 +1,51 @@
 {% extends 'SchoolGestionBundle:Default:index.html.twig' %}
 
 {% block content -%}
-    <h1>Modification d'une matière</h1>
+    <h1 class="text-center">Modification d'une mati&egrave;re</h1>
 
-    {{ form(edit_form) }}
+    {#{{ form(edit_form) }}#}
 
-    <ul class="record_actions">
-        <li>
-            <a href="{{ path('matiere') }}">
-                Retourner à la liste
-            </a>
-        </li>
-        <li>{{ form(delete_form) }}</li>
-    </ul>
+    {{ form_start(edit_form)}}
+    <div class="form-group">
+        <div class="row">
+            <div class="col-md-offset-4 col-sm-3">
+                <label>Nom de la mati&egrave;re</label>
+                {{ form_widget(edit_form.nom, {'attr': {'class': 'form-control', 'placeholder':'ex: Informatique'}})  }}
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="row">
+            <div class="col-md-offset-4 col-sm-3">
+                <label>Abr&eacute;viation</label>
+                {{ form_widget(edit_form.abreviation, {'attr': {'class': 'form-control', 'placeholder':'ex: INFO'}})  }}
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="row">
+            <div class="col-md-offset-4 col-sm-3">
+                <label>Cat&eacute;gorie</label>
+                {{ form_widget(edit_form.categorie, {'attr': {'class': 'form-control'}})  }}
+            </div>
+        </div>
+    </div>
+    {{ form_end(edit_form)}}
+
+    <p>&nbsp;
+        <a href="{{ path('matiere')}}" class="btn btn-primary">
+            <i class="glyphicon glyphicon-chevron-left"></i>
+            Retour &agrave; la liste
+        </a>
+        {#{{ form(delete_form) }}#}
+    </p>
+
+    {#<ul class="record_actions">#}
+        {#<li>#}
+            {#<a href="{{ path('matiere') }}">#}
+                {#Retourner à la liste#}
+            {#</a>#}
+        {#</li>#}
+        {#<li>{{ form(delete_form) }}</li>#}
+    {#</ul>#}
 {% endblock %}
