--- a/src/School/StudentBundle/Resources/views/Absence/index.html.twig
+++ b/src/School/StudentBundle/Resources/views/Absence/index.html.twig
@@ -12,8 +12,7 @@
                 <th>Séquence</th>
                 <th>Année</th>
                 <th>Nombre d'absence(s)</th>
-                <th>Voir</th>
-                <th>Modifier</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -26,10 +25,8 @@
                     <td>{{ entity.anneeScolaire }}</td>
                     <td>{{ entity.nbreAbsence }}</td>
                     <td>
-                        <a href="{{ path('absence_show', { 'id': entity.id }) }}">show</a>
-                    </td>
-                    <td>
-                        <a href="{{ path('absence_edit', { 'id': entity.id }) }}">edit</a>
+                        <a class="btn btn-info" href="{{ path('absence_show', { 'id': entity.id }) }}"><i class="glyphicon glyphicon-eye-open"></i></a>
+                        <a class="btn btn-success" href="{{ path('absence_edit', { 'id': entity.id }) }}"><i class="glyphicon glyphicon-edit"></i></a>
                     </td>
                 </tr>
             {% endfor %}
