--- a/src/School/StudentBundle/Resources/views/Classe/edit.html.twig
+++ b/src/School/StudentBundle/Resources/views/Classe/edit.html.twig
@@ -3,7 +3,42 @@
 {% block content -%}
     <h1>Classe edit</h1>
 
-    {{ form(edit_form) }}
+    {#{{ form(edit_form) }}#}
+
+    {{ form_start(edit_form)}}
+    <div class="form-group">
+        <div class="row">
+            <div class="col-md-offset-4 col-sm-3">
+                <label>Nombre d'absences</label>
+                {{ form_widget(edit_form.nbreAbsence, {'attr': {'class': 'form-control'}})  }}
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="row">
+            <div class="col-md-offset-4 col-sm-3">
+                <label>&eacute;l&egrave;ve</label>
+                {{ form_widget(edit_form.student, {'attr': {'class': 'form-control'}})  }}
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="row">
+            <div class="col-md-offset-4 col-sm-3">
+                <label>S&eacute;quence</label>
+                {{ form_widget(edit_form.sequence, {'attr': {'class': 'form-control'}})  }}
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="row">
+            <div class="col-md-offset-4 col-sm-3">
+                <label>Ann&eacute;e Acad&eacute;mique</label>
+                {{ form_widget(edit_form.anneeScolaire, {'attr': {'class': 'form-control'}})  }}
+            </div>
+        </div>
+    </div>
+    {{ form_end(form)}}
 
         <ul class="record_actions">
     <li>
