--- a/src/School/StudentBundle/Resources/views/Cycle/edit.html.twig
+++ b/src/School/StudentBundle/Resources/views/Cycle/edit.html.twig
@@ -3,14 +3,31 @@
 {% block content -%}
     <h1 class="text-center">Mise &agrave; jour d'un Cycle</h1>
 
-    {{ form(edit_form) }}
+    {#{{ form(edit_form) }}#}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('cycle') }}">
-            Back to the list
+    {{ form_start(edit_form)}}
+        <div class="form-group">
+            <div class="row">
+                <div class="col-sm-6">
+                    {{ form_widget(edit_form.nom, {'attr': {'class': 'form-control','placeholder':'ex:1er'}})  }}
+                </div>
+            </div>
+        </div>
+    {{ form_end(edit_form)}}
+    <p>&nbsp;
+        <a href="{{ path('cycle')}}" class="btn btn-primary">
+            <i class="glyphicon glyphicon-chevron-left"></i>
+            Retour &agrave; la liste
         </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+        {#{{ form(delete_form) }}#}
+    </p>
+
+        {#<ul class="record_actions">#}
+    {#<li>#}
+        {#<a href="{{ path('cycle') }}">#}
+            {#Back to the list#}
+        {#</a>#}
+    {#</li>#}
+    {#<li>{{ form(delete_form) }}</li>#}
+{#</ul>#}
 {% endblock %}
