--- a/src/School/StudentBundle/Resources/views/Classe/new.html.twig
+++ b/src/School/StudentBundle/Resources/views/Classe/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'SchoolGestionBundle:Default:index.html.twig' %}
 
 {% block content -%}
-    <h1 class="text-center">Nouvelle Classe</h1>
+    <h2 class="text-center">Nouvelle Classe</h2>
 
     {{ form_start(form)}}
     <div class="form-group">
@@ -25,6 +25,14 @@
             <div class="col-md-offset-4 col-sm-3">
                 <label>Classe M&egrave;re</label>
                 {{ form_widget(form.classePere, {'attr': {'class': 'form-control'}})  }}
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="row">
+            <div class="col-md-offset-4 col-sm-3">
+                <label>Classe Suivante</label>
+                {{ form_widget(form.classeNext, {'attr': {'class': 'form-control'}})  }}
             </div>
         </div>
     </div>
