--- a/src/School/StudentBundle/Resources/views/Classe/edit.html.twig
+++ b/src/School/StudentBundle/Resources/views/Classe/edit.html.twig
@@ -50,6 +50,7 @@
     <table class="col-md-offset-4">
         <tr>
             <td >{{ form_end(edit_form)}}</td>
+            <td>&nbsp;&nbsp;</td>
             <td >{{ form(delete_form) }}</td>
         </tr>
     </table>
