--- a/src/School/MatiereBundle/Resources/views/Categorie/show.html.twig
+++ b/src/School/MatiereBundle/Resources/views/Categorie/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'SchoolGestionBundle:Default:index.html.twig' %}
 
 {% block content -%}
-    <h1>Détail d'une catégorie</h1>
+    <h2>Détail d'une catégorie</h2>
 
     <table class="record_properties table table-striped">
         <tbody>
@@ -15,16 +15,26 @@
             </tr>
         </tbody>
     </table>
-    <p>
-        <a href="{{ path('categorie')}}" class="btn btn-primary">
-            <i class="glyphicon glyphicon-chevron-left"></i>
-            Retour &agrave; la liste
-        </a>
-        <a href="{{ path('categorie_edit',{'id': entity.id}) }}" class="btn btn-success">
-            <i class="glyphicon glyphicon-edit"> </i>
-            Modifier
-        </a>
-        {{ form(delete_form) }}
-    </p>
+    <table>
+        <tr>
+            <td>
+                <a href="{{ path('categorie')}}" class="btn btn-primary">
+                    <i class="glyphicon glyphicon-chevron-left"></i>
+                    Retour &agrave; la liste
+                </a>
+            </td>
+            <td><td>&nbsp;&nbsp;</td></td>
+            <td>
+                <a href="{{ path('categorie_edit',{'id': entity.id}) }}" class="btn btn-success">
+                    <i class="glyphicon glyphicon-edit"> </i>
+                    Modifier
+                </a>
+            </td>
+            <td><td>&nbsp;&nbsp;</td></td>
+            <td>
+                {{ form(delete_form) }}
+            </td>
+        </tr>
+    </table>
 
 {% endblock %}
