--- a/src/School/StudentBundle/Resources/views/Inscription/show.html.twig
+++ b/src/School/StudentBundle/Resources/views/Inscription/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'SchoolGestionBundle:Default:index.html.twig' %}
 
 {% block content -%}
-    <h1 class="text-center">D&eacute;tail sur une Inscription</h1>
+    <h2 class="text-center">D&eacute;tail sur une Inscription</h2>
 
     <table class="record_properties table">
         <tbody>
@@ -37,15 +37,26 @@
             </tr>
         </tbody>
     </table>
-    <p>
-        <a href="{{ path('inscription_notyet')}}" class="btn btn-primary">
-            <i class="glyphicon glyphicon-chevron-left"></i>
-            Retour &agrave; la liste
-        </a>
-        <a href="{{ path('inscription_edit',{'id': entity.id}) }}" class="btn btn-success">
-            <i class="glyphicon glyphicon-edit"> </i>
-            Modifier
-        </a>
-        {{ form(delete_form) }}
-    </p>
+    <table>
+        <tr>
+            <td>
+                <a href="{{ path('inscription_notyet')}}" class="btn btn-primary">
+                    <i class="glyphicon glyphicon-chevron-left"></i>
+                    Retour &agrave; la liste
+                </a>
+            </td>
+            <td>&nbsp;&nbsp;</td>
+            <td>
+                <a href="{{ path('inscription_edit',{'id': entity.id}) }}" class="btn btn-success">
+                    <i class="glyphicon glyphicon-edit"> </i>
+                    Modifier
+                </a>
+            </td>
+            <td><td>&nbsp;&nbsp;</td></td>
+            <td>
+                {{ form(delete_form) }}
+            </td>
+        </tr>
+    </table>
+</p>
 {% endblock %}
