--- a/src/School/StudentBundle/Resources/views/Student/addStudent.html.twig
+++ b/src/School/StudentBundle/Resources/views/Student/addStudent.html.twig
@@ -3,108 +3,118 @@
 
 {% block content %}
 
-	{{ form_start(form)}}
-	<div class="col-md-12">
-		<h1 class="text-center">Ajout d'un &eacute;l&egrave;ve</h1>
-		<div>
-			<div class="col-sm-6">
-				<div class="col-md-12">
-					<div class="form-group">
-						{{ form_label(form.matricule, 'Matricule: ', {'label_attr': {'class': 'control-label'}}) }}
-						<div>
-							{{ form_widget(form.matricule, {'attr': {'class': 'form-control'}})  }}
-						</div>
-					</div>
-					<div class="form-group">
-						{{ form_label(form.nom, 'Nom: ', {'label_attr': {'class': 'control-label'}}) }}
-						<div>
-							{{ form_widget(form.nom, {'attr': {'class': 'form-control'}})  }}
-						</div>
-					</div>
-					<div class="form-group">
-						{{ form_label(form.sexe, 'Sexe: ', {'label_attr': {'class': 'control-label'}}) }}
-						<div>
-							{{ form_widget(form.sexe, {'attr': {'class': 'form-control'}})  }}
-						</div>
-					</div>
-					<div class="form-group">
-						{{ form_label(form.dateNaissance, 'Date de Naissance: ', {'label_attr': {'class': 'control-label'}}) }}
-						<div>
-							{{ form_widget(form.dateNaissance, {'attr': {'class': 'form-control'}})  }}
-						</div>
-					</div>
-					<div class="form-group">
-						{{ form_label(form.lieuNaissance, 'Lieu de Naissance: ', {'label_attr': {'class': 'control-label'}}) }}
-						<div>
-							{{ form_widget(form.lieuNaissance, {'attr': {'class': 'form-control'}})  }}
-						</div>
-					</div>
-					<div class="form-group">
-						{{ form_label(form.nomPere, 'Nom du père: ', {'label_attr': {'class': 'control-label'}}) }}
-						<div>
-							{{ form_widget(form.nomPere, {'attr': {'class': 'form-control'}})  }}
-						</div>
-					</div>
-					<div class="form-group">
-						{{ form_label(form.nomMere, 'Nom de la mère: ', {'label_attr': {'class': 'control-label'}}) }}
-						<div>
-							{{ form_widget(form.nomMere, {'attr': {'class': 'form-control'}})  }}
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class=" col-md-6">
-				<div class="col-md-12">
+    {{ form_start(form)}}
+    <div class="col-md-12">
+        <h2 class="text-center">{% if editons is defined %}Modification d'un &eacute;l&egrave;ve{% else %}Ajout d'un &eacute;l&egrave;ve{% endif %}</h2>
+        <div>
+            <div class="col-sm-6">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        {{ form_label(form.matricule, 'Matricule: ', {'label_attr': {'class': 'control-label'}}) }}
+                        <div>
+                            {{ form_widget(form.matricule, {'attr': {'class': 'form-control'}})  }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        {{ form_label(form.nom, 'Nom: ', {'label_attr': {'class': 'control-label'}}) }}
+                        <div>
+                            {{ form_widget(form.nom, {'attr': {'class': 'form-control'}})  }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        {{ form_label(form.sexe, 'Sexe: ', {'label_attr': {'class': 'control-label'}}) }}
+                        <div>
+                            {{ form_widget(form.sexe, {'attr': {'class': 'form-control'}})  }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        {{ form_label(form.dateNaissance, 'Date de Naissance: ', {'label_attr': {'class': 'control-label'}}) }}
+                        <div>
+                            {{ form_widget(form.dateNaissance, {'attr': {'class': 'form-control'}})  }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        {{ form_label(form.lieuNaissance, 'Lieu de Naissance: ', {'label_attr': {'class': 'control-label'}}) }}
+                        <div>
+                            {{ form_widget(form.lieuNaissance, {'attr': {'class': 'form-control'}})  }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        {{ form_label(form.nomPere, 'Nom du père: ', {'label_attr': {'class': 'control-label'}}) }}
+                        <div>
+                            {{ form_widget(form.nomPere, {'attr': {'class': 'form-control'}})  }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        {{ form_label(form.nomMere, 'Nom de la mère: ', {'label_attr': {'class': 'control-label'}}) }}
+                        <div>
+                            {{ form_widget(form.nomMere, {'attr': {'class': 'form-control'}})  }}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class=" col-md-6">
+                <div class="col-md-12">
 
-					<div class="form-group">
-						{{ form_label(form.adressePere, 'Adresse du père: ', {'label_attr': {'class': 'control-label'}}) }}
-						<div>
-							{{ form_widget(form.adressePere, {'attr': {'class': 'form-control'}})  }}
-						</div>
-					</div>
-					<div class="form-group">
-						{{ form_label(form.adresseMere, 'Adresse de la mère: ', {'label_attr': {'class': 'control-label'}}) }}
-						<div>
-							{{ form_widget(form.adresseMere, {'attr': {'class': 'form-control'}})  }}
-						</div>
-					</div>
+                    <div class="form-group">
+                        {{ form_label(form.adressePere, 'Adresse du père: ', {'label_attr': {'class': 'control-label'}}) }}
+                        <div>
+                            {{ form_widget(form.adressePere, {'attr': {'class': 'form-control'}})  }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        {{ form_label(form.adresseMere, 'Adresse de la mère: ', {'label_attr': {'class': 'control-label'}}) }}
+                        <div>
+                            {{ form_widget(form.adresseMere, {'attr': {'class': 'form-control'}})  }}
+                        </div>
+                    </div>
 
-					<div class="form-group">
-						{{ form_label(form.personneAcontacter, 'Personne à contacter en cas durgence: ', {'label_attr': {'class': 'control-label'}}) }}
-						<div>
-							{{ form_widget(form.personneAcontacter, {'attr': {'class': 'form-control'}})  }}
-						</div>
-					</div>
-					<div class="form-group">
-						{{ form_label(form.dernierEtablissementFreq, 'Dernier établissement fréquenté: ', {'label_attr': {'class': 'control-label'}}) }}
-						<div>
-							{{ form_widget(form.dernierEtablissementFreq, {'attr': {'class': 'form-control'}})  }}
-						</div>
-					</div>
-					<div class="form-group">
-						{{ form_label(form.classe, 'Inscrit en (Choisissez la classe): ', {'label_attr': {'class': 'control-label'}}) }}
-						<div>
-							{{ form_widget(form.classe, {'attr': {'class': 'form-control'}})  }}
-						</div>
-					</div>
-					<div class="form-group">
-						{{ form_label(form.photo, 'Photo: ', {'label_attr': {'class': 'control-label'}}) }}
-						<div>
-							{{ form_widget(form.photo)  }}
-						</div>
-					</div>
-				</div>
-				<div class="form-group">
-					{{ form_label(form.save, 'Enregister: ', {'label_attr': {'class': 'control-label'}}) }}
-					<div>
-						{{ form_widget(form.save, {'attr': {'class': 'btn btn-primary'}})  }}
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	{{ form_end(form)}}
+                    <div class="form-group">
+                        {{ form_label(form.personneAcontacter, 'Personne à contacter en cas durgence: ', {'label_attr': {'class': 'control-label'}}) }}
+                        <div>
+                            {{ form_widget(form.personneAcontacter, {'attr': {'class': 'form-control'}})  }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        {{ form_label(form.dernierEtablissementFreq, 'Dernier établissement fréquenté: ', {'label_attr': {'class': 'control-label'}}) }}
+                        <div>
+                            {{ form_widget(form.dernierEtablissementFreq, {'attr': {'class': 'form-control'}})  }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        {{ form_label(form.classe, 'Inscrit en (Choisissez la classe): ', {'label_attr': {'class': 'control-label'}}) }}
+                        <div>
+                            {{ form_widget(form.classe, {'attr': {'class': 'form-control'}})  }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        {{ form_label(form.photo, 'Photo: ', {'label_attr': {'class': 'control-label'}}) }}
+                        <div>
+                            {{ form_widget(form.photo)  }}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <table class="pull-right">
+        <tr>
+            <td>
+                {{ form_widget(form.valider, {'attr': {'class': 'btn btn-primary'}})  }}
+            </td>
+            {{ form_end(form)}}
+            <td>
+                &nbsp; &nbsp;
+            </td>
+            <td>
+                <a href="{{ path('school_student_list') }}" class="btn btn-info">Annuler</a>
+            </td>
+        </tr>
+    </table>
 
-     <a href="{{ path('school_student_list') }}" class="btn btn-info">Annuler</a>
+
+
+
+
 
 {% endblock %}
