--- a/src/School/UserBundle/Resources/views/User/index.html.twig
+++ b/src/School/UserBundle/Resources/views/User/index.html.twig
@@ -1,8 +1,6 @@
-{% extends '::base.html.twig' %}
-
-{% block body -%}
-    <div class="container">
-    <h1 class="text-center">List des utilisateurs</h1>
+{% extends 'SchoolGestionBundle:Default:index.html.twig' %}
+{% block content %}
+    <h2 class="text-center">List des utilisateurs (Personnel de l'établissement)</h2>
 
     <table class="records_list table table-striped panel-primary" id="user">
         <thead class="panel-heading">
@@ -14,7 +12,7 @@
                 <th>Grade</th>
                 <th>Diplomes</th>
                 <th>Contact</th>
-                <th>Actions</th>
+                <th>Actions (Voir/Modifier)</th>
             </tr>
         </thead>
         <tbody>
@@ -35,7 +33,6 @@
             {% endfor %}
         </tbody>
     </table>
-    </div>
 
     {#<ul>#}
         {#<li>#}
